<!--
  Copyright 2017 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Stamp Collector</string>

    <string name="stamp_title">Stamp Name</string>
    <string name="stamp_pic_desc">Stamp Picture Details</string>
    <string name="stamp_counter">0</string>
    <string name="add_counter_button">+</string>
    <string name="subtract_counter_button">-</string>

    <string-array name="stamp_title_array">
        <item>Indian Post</item>
        <item>Gandhi Post</item>
        <item>Vivekanand Post</item>
        <item>Bismillah Khan Post</item>
        <item>APJ Abdul Kalam Post</item>
        <item>Mother Teresa Post</item>
    </string-array>

    <integer-array name="stamp_images_array">
        <item>@drawable/indian</item>
        <item>@drawable/gandhi</item>
        <item>@drawable/vivek</item>
        <item>@drawable/bismillah</item>
        <item>@drawable/apj</item>
        <item>@drawable/mother</item>
    </integer-array>

    <integer-array name="stamp_counter_array">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </integer-array>
</resources>
